log
Thu 28 Mar 2024 09:49:41 PM UTC: 
 tests:  0|6
total_score: 0/70
b7c1bb3
Thu 28 Mar 2024 11:56:10 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f9dc02
Thu 28 Mar 2024 11:58:42 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
51008d2
Fri 29 Mar 2024 12:00:44 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:13: error: ‘List’ {aka ‘struct List’} has no member named ‘currnet’; did you mean ‘current’?
   52 |   if (list->currnet != NULL || list->currnet->next != NULL){
      |             ^~~~~~~
      |             current
list.c:52:38: error: ‘List’ {aka ‘struct List’} has no member named ‘currnet’; did you mean ‘current’?
   52 |   if (list->currnet != NULL || list->currnet->next != NULL){
      |                                      ^~~~~~~
      |                                      current
Compilation failed
5c13f02
Fri 29 Mar 2024 12:00:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:38: error: ‘List’ {aka ‘struct List’} has no member named ‘currnet’; did you mean ‘current’?
   52 |   if (list->current != NULL || list->currnet->next != NULL){
      |                                      ^~~~~~~
      |                                      current
Compilation failed
f2f8d59
Fri 29 Mar 2024 12:00:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c41c7f
Fri 29 Mar 2024 12:01:49 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
08ab820
Fri 29 Mar 2024 12:08:21 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f58569e
Fri 29 Mar 2024 12:09:12 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3a4a3b2
Fri 29 Mar 2024 12:11:10 AM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:63:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   63 |   Node* aux = list->head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
df1d11a
Fri 29 Mar 2024 12:11:16 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|4
total_score: 25/70
caf798e
Fri 29 Mar 2024 12:12:47 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
93048c2
Sat 30 Mar 2024 02:29:11 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
859fa6d
Sat 30 Mar 2024 02:29:52 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:75:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   75 |   return NULL;
      |          ^~~~
list.c:74:6: note: declared here
   74 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e306dd1
Sat 30 Mar 2024 02:30:07 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d00b7f7
Sat 30 Mar 2024 02:30:21 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
2e82c12
Sat 30 Mar 2024 02:37:56 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
ad63e2d
Sat 30 Mar 2024 02:38:50 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
1b74a1b
Sat 30 Mar 2024 02:44:38 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8abfbf6
Sat 30 Mar 2024 02:46:06 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
b83abc3
Sat 30 Mar 2024 03:04:20 AM UTC: 
 list.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:15: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  112 |   void*data = current->data;
      |               ^~~~~~~
      |               popCurrent
list.c:112:15: note: each undeclared identifier is reported only once for each function it appears in
list.c:115:28: error: ‘List’ {aka ‘struct List’} has no member named ‘curent’; did you mean ‘current’?
  115 |   while(aux->next != list->curent){
      |                            ^~~~~~
      |                            current
list.c:118:21: error: ‘List’ {aka ‘struct List’} has no member named ‘curent’; did you mean ‘current’?
  118 |   aux->next = list->curent->next;
      |                     ^~~~~~
      |                     current
Compilation failed
f3bd72b
Sat 30 Mar 2024 03:04:26 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:15: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  112 |   void*data = current->data;
      |               ^~~~~~~
      |               popCurrent
list.c:112:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a94d801
Sat 30 Mar 2024 03:04:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6c607b6
